deploy: f41f5fc3434e3827908b3612df394f1409a4a86f

--- a/the_machinery_book/collaboration.html
+++ b/the_machinery_book/collaboration.html
@@ -175,7 +175,7 @@ same machine (just start two instances of the_machinery.exe) and connect using t
 <h2 id="whos-project-is-edited"><a class="header" href="#whos-project-is-edited">Who's project is edited?</a></h2>
 <p>In our collaboration model, one of the users always acts as a host. The host invites others to join her in editing <em>her</em> project. All the changes made by the participants in the session end up in the host’s project and it’s the host’s responsibility to save the project, check in the changes into version control, or do whatever else is needed to make the changes permanent.</p>
 <blockquote>
-<p><strong>WARNING:</strong> Please only connect to people you trust. Be aware that Plugin Assets will be send via a collaboration as well. The Engine will warn you every time a plugin asset is send.</p>
+<p><strong>WARNING:</strong> Please only connect to people you trust. Be aware that Plugin Assets will be sent via a collaboration as well. The Engine will warn you every time a plugin asset is sent.</p>
 </blockquote>
 <h2 id="host-or-join-sessions"><a class="header" href="#host-or-join-sessions">Host or Join Sessions</a></h2>
 <p>You have three options to host or join a collaboration Session:</p>
@@ -183,21 +183,21 @@ same machine (just start two instances of the_machinery.exe) and connect using t
 <p>Host a server on your LAN. The system will choose a free port on your machine for hosting. Other users on the same LAN can join your session by choosing <em>Join LAN Server</em> and selecting your machine.</p>
 <p><img src="https://www.dropbox.com/s/0amm9km2jiejxx1/tm_guide_collab_host_local.png?dl=1" alt="Host locally" /></p>
 <ol>
-<li>You can select a type of hosting or joining a Server.</li>
+<li>Select &quot;Host LAN Server&quot; from the dropdown</li>
 <li>Your Handle, in case of hosting this will be the name the session will have as well as your username.</li>
 <li>When you press Host the session starts.</li>
 </ol>
 <h4 id="join-a-local-server"><a class="header" href="#join-a-local-server">Join a local Server</a></h4>
-<p>When you open  the collaboration tab the default view is the &quot;Join LAN Server&quot; view. In this view you can join a local server.</p>
+<p>When you open the collaboration tab the default view is the &quot;Join LAN Server&quot; view. In this view you can join a local server.</p>
 <p><img src="https://www.dropbox.com/s/1cx17p05swuu6mg/tm_guide_collab_join_local.png?dl=1" alt="The default view of the collab tab is the join local option" /></p>
 <ol>
-<li>You can select a type of hosting or joining a Server.</li>
+<li>Select &quot;Join LAN Server&quot; from the dropdown</li>
 <li>You can select a collaboration session. If there is no session available this field is disabled.</li>
 <li>Your Handle, the name the other user can see on their side.</li>
 <li>If you selected a session you can press this button to join. When you join the Engine will download the host's Project.</li>
 </ol>
 <h3 id="host-internet-server"><a class="header" href="#host-internet-server">Host Internet Server</a></h3>
-<p>Host a server that can be accessed over the internet on a specified port. </p>
+<p>Host a server that can be accessed over the internet on a specified port.</p>
 <p><img src="https://www.dropbox.com/s/q3q7ltunpqmepeq/tm_guide_collab_host_internet.png?dl=1" alt="Host Internet Server" /></p>
 <ol>
 <li>You can select the port of your session. If your router does not support <strong>UPnP</strong> you might have to port forward your selected port.</li>
@@ -217,7 +217,7 @@ same machine (just start two instances of the_machinery.exe) and connect using t
 <li>It will try to connect to the other user.</li>
 </ol>
 <blockquote>
-<p><strong>WARNING:</strong> Please only connect to people you trust. Be aware that Plugin Assets will be send via a collaboration as well. The Engine will warn you every time a plugin asset is send.</p>
+<p><strong>WARNING:</strong> Please only connect to people you trust. Be aware that Plugin Assets will be sent via a collaboration as well. The Engine will warn you every time a plugin asset is sent.</p>
 </blockquote>
 <h3 id="host-a-discord-based-session"><a class="header" href="#host-a-discord-based-session">Host a Discord based Session</a></h3>
 <p>The Machinery allows you to connect via Discord with your co-workers, team mates or friends. Important for this to work is that both parties: Host and Clients have the following option enabled in their Discord Options: <strong>Discord Settings -&gt; Activity Status</strong></p>
@@ -225,7 +225,7 @@ same machine (just start two instances of the_machinery.exe) and connect using t
 <blockquote>
 <p><strong>Note:</strong> Host and client cannot be invisible otherwise invites wont work!</p>
 </blockquote>
-<p>After this settings is enabled you need to add The Machinery as a game so others can see you are playing it. This allows you now to invite your friends via the Engine into your session and vice versa.</p>
+<p>After this setting is enabled you need to add The Machinery as a game so others can see you are playing it. This allows you now to invite your friends via the Engine into your session and vice versa.</p>
 <p><img src="https://www.dropbox.com/s/6e6lanbsz5etfkm/tm_guide_collab_discord_host.png?dl=1" alt="" /></p>
 <h2 id="connected"><a class="header" href="#connected">Connected</a></h2>
 <p>When you are connected to a collaboration session you have this view. In the connected view you can chat with the other participants of the chat. The session will <strong>not</strong> terminate / disconnect if you close the tab.</p>
