--- a/the_machinery_book/gameplay_coding/visual_scripting/subgraphs.html
+++ b/the_machinery_book/gameplay_coding/visual_scripting/subgraphs.html
@@ -155,16 +155,16 @@
 <p>A subgraph can have inputs and outputs. You can add them to them the same way as for a normal Graph. But you can also just connect the needed wires with the subgraph node, as the following image shows:</p>
 <p><img src="https://www.dropbox.com/s/18b2z2f1ed80ex6/tm_guide_entity_graph_create_subgraph_input_output.gif?dl=1" alt="" /></p>
 <h2 id="subgraph-prototypes"><a class="header" href="#subgraph-prototypes">Subgraph Prototypes</a></h2>
-<p>The Machinery's  <strong>Prototype</strong> system allows you to create, configure, and store a Entity/Creation Graph complete with all its subgraphs, input/output nodes as a reusable Entity / Creation Graph Asset. </p>
+<p>The Machinery's  <strong>Prototype</strong> system allows you to create, configure, and store an Entity/Creation Graph complete with all its subgraphs, input/output nodes as a reusable Entity / Creation Graph Asset. </p>
 <blockquote>
-<p><strong>Note:</strong> Since the Entity Graph and the Creation Graph are conceptionally similar the same aspects apply to them both! How ever this document will only focus on the Entity Graph.</p>
+<p><strong>Note:</strong> Since the Entity Graph and the Creation Graph are conceptually similar the same aspects apply to them both! However this document will only focus on the Entity Graph.</p>
 </blockquote>
 <p>This Asset acts as a template from which you can create new Prototype instances in other Entity Graphs/Creation Graphs. Any edits that you make to the Asset are automatically reflected in the instances of that Graph, allowing you to easily make broad changes across your whole Project without having to repeatedly make the same edit to every copy of the Asset.</p>
 <blockquote>
-<p><strong>Note:</strong> this does not mean all Prototype instances are identical. You can override individually and add/remove nodes from them, depending on your need!</p>
+<p><strong>Note:</strong> This does not mean all Prototype instances are identical. You can override individually and add/remove nodes from them, depending on your need!</p>
 </blockquote>
 <h3 id="create-a-subgraph-prototype"><a class="header" href="#create-a-subgraph-prototype">Create a subgraph Prototype</a></h3>
-<p>You can turn a subgraph into a prototype by simple using the context menu of the subgraph node and select Create Subgraph prototype. This will create a Subgraph Prototype Asset (<code>.entity_graph</code>) in your Asset Browser. When you open it you are opening the instanced version. Any change to thisversion will not be shared across all other versions! Only changes made to the prototype will propagte to all changes! To open a prototype you can use the &quot;Open Prototype&quot; Button. </p>
+<p>You can turn a subgraph into a prototype by simply using the context menu of the subgraph node and selecting Create Subgraph prototype. This will create a Subgraph Prototype Asset (<code>.entity_graph</code>) in your Asset Browser. When you open it you are opening the instanced version. Any change to this version will not be shared across all other versions! Only changes made to the prototype will propagate to all changes! To open a prototype you can use the &quot;Open Prototype&quot; Button. </p>
 <p><img src="https://www.dropbox.com/s/kstww1jbo3dpvwj/tm_guide_entity_graph_create_subgraph_prototype.gif?dl=1" alt="" /></p>
 
                     </main>
