--- a/the_machinery_book/getting_started/migration_from_unity.html
+++ b/the_machinery_book/getting_started/migration_from_unity.html
@@ -218,7 +218,7 @@
 </ol>
 <p>You do not like C? Do not worry! You can use C++, Zig, Rust, or any other language that binds to C.</p>
 <h3 id="where-are-my-materials-shaders-textures-particle-effects"><a class="header" href="#where-are-my-materials-shaders-textures-particle-effects">Where are my Materials, Shaders, Textures, Particle Effects?</a></h3>
-<p>All of these can be represented via the the <a href="https://ourmachinery.github.io/themachinery-books/the_machinery_book/creation_graphs/concept.html">Creation Graphs</a>.</p>
+<p>All of these can be represented via the <a href="https://ourmachinery.github.io/themachinery-books/the_machinery_book/creation_graphs/concept.html">Creation Graphs</a>.</p>
 <h3 id="project-data"><a class="header" href="#project-data">Project data?</a></h3>
 <p>The Machinery supports two types of Project formats:</p>
 <ol>
@@ -237,7 +237,7 @@
 <blockquote>
 <p><strong>Note</strong> that import of large assets can take a significant amount of time. You can monitor the progress of the import operation in the status bar.</p>
 </blockquote>
-<p>For more information see  <a href="https://ourmachinery.github.io/themachinery-books/the_machinery_book/editing_workflows/import_assets.html">How to import assets</a> or checkout our <a href="https://ourmachinery.github.io/themachinery-books/the_machinery_book//editing_workflows/asset_pipeline.html">Example Workflow for Importing an Asset and create a Entity</a></p>
+<p>For more information see  <a href="https://ourmachinery.github.io/themachinery-books/the_machinery_book/editing_workflows/import_assets.html">How to import assets</a> or checkout our <a href="https://ourmachinery.github.io/themachinery-books/the_machinery_book//editing_workflows/asset_pipeline.html">Example Workflow for Importing an Asset and create an Entity</a></p>
 <h3 id="what-are-common-file-formats-supported"><a class="header" href="#what-are-common-file-formats-supported">What are common file formats supported?</a></h3>
 <table><thead><tr><th align="left">Asset Type</th><th align="left">Supported Formats</th></tr></thead><tbody>
 <tr><td align="left">3D</td><td align="left">.fbx, .obj, .gltf</td></tr>
