--- a/the_machinery_book/qa_pipeline/memory.html
+++ b/the_machinery_book/qa_pipeline/memory.html
@@ -147,7 +147,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="memory-usage-tab"><a class="header" href="#memory-usage-tab">Memory Usage Tab</a></h1>
-<p>The Machinery has a build in Leak detection when one is using the provided allocators. Besides they all will log the used memory in the Memory Usage tab!</p>
+<p>The Machinery has a built-in Leak detection when one is using the provided allocators. Besides they all will log the used memory in the Memory Usage tab!</p>
 <ul>
 <li><a href="https://ourmachinery.com/apidoc/foundation/memory_tracker.h.html#memory_tracker.h">Memory leak Detection</a></li>
 </ul>
