--- a/the_machinery_book/the_editor/asset_browser.html
+++ b/the_machinery_book/the_editor/asset_browser.html
@@ -189,11 +189,11 @@ There you have the option to filter via file extension or Asset-Labels. You can 
 Double clicks on an asset may open the asset in their corresponding tab or window. Not all assets have a specific action associated with them. </p>
 <table><thead><tr><th>Asset</th><th>Action on double click</th></tr></thead><tbody>
 <tr><td>Animation State Machine (.asm)</td><td>Opens a new window with the Animation state machine layout.</td></tr>
-<tr><td>Creation (.creation)</td><td>Opens a graph tab if no graph tab is open. If a graph tab is open it will load this graph. When ever we have a <strong>.creation</strong> file than the graph is called Creation Graph and is used for working on graphics related workflows such as materials.</td></tr>
+<tr><td>Creation (.creation)</td><td>Opens a graph tab if no graph tab is open. If a graph tab is open it will load this graph. Whenever we have a <strong>.creation</strong> file the graph is called Creation Graph and is used for working on graphics related workflows such as materials.</td></tr>
 <tr><td>Entity (.entity)</td><td>Opens a s<strong>cene tab</strong> if no scene tab is open. If a scene tab is open it will change the view to this entity.</td></tr>
-<tr><td>Entity Graph (.entity_graph)</td><td>Opens a graph tab if no graph tab is open. If a graph tab is open it will load this graph. When ever we have a <strong>.entity_graph</strong> file than the graph is called Entity Graph and is used to make Entity Graph functionality reusable and shareable between multiple graphs.</td></tr>
+<tr><td>Entity Graph (.entity_graph)</td><td>Opens a graph tab if no graph tab is open. If a graph tab is open it will load this graph. Whenever we have a <strong>.entity_graph</strong> file the graph is called Entity Graph and is used to make Entity Graph functionality reusable and shareable between multiple graphs.</td></tr>
 </tbody></table>
-<p>A single click will always focus a associated Properties Tab on the selected asset.</p>
+<p>A single click will always focus an associated Properties Tab on the selected asset.</p>
 <p><em>Dragging assets into the Scene</em></p>
 <p>You can drag assets around in the asset browser. It allows for quick reorganization of assets. It is also possible to drag assets from the asset browser directly into the Scene. Assets can be dragged from the Asset Browser Tab to other tabs if they support the asset type.
 You can also drag assets from the Windows-Explorer into your project. This action supports the same formats as the regular importer via <strong>File → Import Assets.</strong> </p>
@@ -201,7 +201,7 @@ You can also drag assets from the Windows-Explorer into your project. This actio
 <p>To organize your project, you can use Asset Labels. An asset can be associated with one or more different asset labels. You can use them to filter your asset in the asset browser or plugins via the <a href="https://ourmachinery.com/apidoc/plugins/editor_views/asset_label.h.html#structtm_asset_label_api">asset label api</a>.</p>
 <p>There are two types of Asset labels: </p>
 <ul>
-<li>System Asset Labels: They are added by plugins and cannot be assigned by the user to a asset.
+<li>System Asset Labels: They are added by plugins and cannot be assigned by the user to an asset.
 <ul>
 <li>User Asset Labels: You add them, and they are part of the project with the file extension: .asset_label and can be found in the asset_label directory.</li>
 </ul>
@@ -219,7 +219,7 @@ You can also drag assets from the Windows-Explorer into your project. This actio
 <h2 id="keyboard-bindings"><a class="header" href="#keyboard-bindings">Keyboard bindings</a></h2>
 <table><thead><tr><th>Key</th><th>Descriptions</th></tr></thead><tbody>
 <tr><td>Arrow Keys</td><td>Allow you to navigate through the Asset browser</td></tr>
-<tr><td>Enter</td><td>If selected a folder or a asset will open the folder or asset</td></tr>
+<tr><td>Enter</td><td>If selected a folder or an asset will open the folder or asset</td></tr>
 <tr><td>F2</td><td>Will rename asset or folder in Asset View Panel and Directory Tree View</td></tr>
 <tr><td>Ctrl + F</td><td>Search in the current project</td></tr>
 <tr><td>CTRL + D</td><td>Duplicates selected Asset</td></tr>
