--- a/the_machinery_book/the_editor/entity_tree_tab.html
+++ b/the_machinery_book/the_editor/entity_tree_tab.html
@@ -175,7 +175,7 @@
 <p>The Entity Tree view, prototype instances are shown in yellow to distinguish them from locally owned child entities (which are shown in white).</p>
 <p><strong>Prototypes:</strong> Prototypes are just entities that live in the Asset Browser as assets (.entity and the current entity in the Entity Tree View is based upon those entity assets. You can overwrite them in the Entity Tree View and make them unique, but any change to the asset will propagate to the entities based on the original prototype. <a href="https://ourmachinery.github.io/themachinery-books/the_machinery_book/editing_workflows/prototypes.html">More here</a></p>
 <p>If you expand an instance, you will notice that most of its components and child entities are grayed out. They cannot be selected because they are inherited from the prototype, and the prototype controls their values.</p>
-<p><img src="https://paper-attachments.dropbox.com/s_688CFE67758A45D845E788E6DA05448A2BCF730C2B07FEF2D06AB18D2C46F736_1625428053926_image.png" alt="The light entity is a instance of a prototype and the Render Component is inherited" /></p>
+<p><img src="https://paper-attachments.dropbox.com/s_688CFE67758A45D845E788E6DA05448A2BCF730C2B07FEF2D06AB18D2C46F736_1625428053926_image.png" alt="The light entity is an instance of a prototype and the Render Component is inherited" /></p>
 <p>If the prototype is modified — for example, if we scatter some more props on the floor — those changes reflect everywhere the prototype is placed.</p>
 <h3 id="adding-new-child-entities"><a class="header" href="#adding-new-child-entities">Adding new child entities</a></h3>
 <p>When you want to reorder one entity as a child to another, you can drag and drop them on them onto each other.</p>
