--- a/the_machinery_book/the_truth/common_types.html
+++ b/the_machinery_book/the_truth/common_types.html
@@ -159,13 +159,13 @@
 <tr><td><code>TM_TT_TYPE__VEC3</code>/<code>TM_TT_TYPE_HASH__VEC3</code></td><td>The first property contains the x value and the second the y value and the third the z value.</td></tr>
 <tr><td><code>TM_TT_TYPE__VEC4</code>/<code>TM_TT_TYPE_HASH__VEC4</code></td><td>The first property contains the x value and the second the y value and the third the z value while the last one contains the w value.</td></tr>
 <tr><td><a href="https://ourmachinery.com/apidoc/foundation/the_truth_types.h.html#tm_tt_type__position">TM_TT_TYPE__POSITION</a>/<code>TM_TT_TYPE_HASH__POSITION</code></td><td>Same as <code>vec4</code>.</td></tr>
-<tr><td><a href="https://ourmachinery.com/apidoc/foundation/the_truth_types.h.html#tm_tt_type__rotation">TM_TT_TYPE__ROTATION</a>/<code>TM_TT_TYPE_HASH__ROTATION</code></td><td>Based on a <code>vec4</code>. Used to represent the rotation of a object via quaternions.</td></tr>
+<tr><td><a href="https://ourmachinery.com/apidoc/foundation/the_truth_types.h.html#tm_tt_type__rotation">TM_TT_TYPE__ROTATION</a>/<code>TM_TT_TYPE_HASH__ROTATION</code></td><td>Based on a <code>vec4</code>. Used to represent the rotation of an object via quaternions.</td></tr>
 <tr><td><a href="https://ourmachinery.com/apidoc/foundation/the_truth_types.h.html#tm_tt_type__scale">TM_TT_TYPE__SCALE</a>/<code>TM_TT_TYPE_HASH__SCALE</code></td><td>Same as <code>vec3.</code></td></tr>
 <tr><td><a href="https://ourmachinery.com/apidoc/foundation/the_truth_types.h.html#tm_tt_type__color_rgb">TM_TT_TYPE__COLOR_RGB</a>/<code>TM_TT_TYPE_HASH__COLOR_RGB</code></td><td>Represents a RGB colour.</td></tr>
 <tr><td><a href="https://ourmachinery.com/apidoc/foundation/the_truth_types.h.html#tm_tt_type__color_rgba">TM_TT_TYPE__COLOR_RGBA</a>/<code>TM_TT_TYPE_HASH__COLOR_RGBA</code></td><td>Represents a RGBA colour.</td></tr>
 <tr><td><a href="https://ourmachinery.com/apidoc/foundation/the_truth_types.h.html#tm_tt_type__rect">TM_TT_TYPE__RECT</a>/<code>TM_TT_TYPE_HASH__RECT</code></td><td>The first property contains the x value and the second the y value and the third the width value while the last one contains the height value.</td></tr>
 </tbody></table>
-<p>There is a helper API to handle all of these types in a easy way, to reduce the boilerplate code: <a href="https://ourmachinery.com/apidoc/foundation/the_truth_types.h.html#structtm_the_truth_common_types_api">tm_the_truth_common_types_api</a>. </p>
+<p>There is a helper API to handle all of these types in an easy way, to reduce the boilerplate code: <a href="https://ourmachinery.com/apidoc/foundation/the_truth_types.h.html#structtm_the_truth_common_types_api">tm_the_truth_common_types_api</a>. </p>
 <blockquote>
 <p><strong>Note:</strong> There is a list of all Truth Types the Engine comes with available on our <a href="https://ourmachinery.com/apidoc/truth_types.html">API Documentation</a></p>
 </blockquote>
