--- a/the_machinery_book/the_truth/custom_truth_type.html
+++ b/the_machinery_book/the_truth/custom_truth_type.html
@@ -154,7 +154,7 @@
 <li>How to define a Type.</li>
 <li>Type Properties</li>
 </ul>
-<p>After this walkthrough you could checkout the <a href="https://ourmachinery.github.io/themachinery-books/tutorials//the_truth/custom_asset/index.html">&quot;Create a custom asset&quot;</a> tutorial! </p>
+<p>After this walkthrough you could check out the <a href="https://ourmachinery.github.io/themachinery-books/tutorials//the_truth/custom_asset/index.html">&quot;Create a custom asset&quot;</a> tutorial! </p>
 <p><strong>Table of Content</strong></p>
 <ul>
 <li><a href="#define-a-type">Define a Type</a></li>
@@ -340,7 +340,7 @@ TM_DLL_EXPORT void tm_load_plugin(struct tm_api_registry_api *reg, bool load)
 } tm_the_truth_property_definition_t;
 </code></pre>
 <p>(<a href="https://ourmachinery.com/apidoc/foundation/the_truth.h.html#structtm_the_truth_property_definition_t">API Documentation</a>)</p>
-<p>Within our <code>create_truth_types</code> we create a array of type <a href="https://ourmachinery.com/apidoc/foundation/the_truth.h.html#structtm_the_truth_property_definition_t">tm_the_truth_property_definition_t</a>. For this example, we define the properties of type bool and string.</p>
+<p>Within our <code>create_truth_types</code> we create an array of type <a href="https://ourmachinery.com/apidoc/foundation/the_truth.h.html#structtm_the_truth_property_definition_t">tm_the_truth_property_definition_t</a>. For this example, we define the properties of type bool and string.</p>
 <pre><code class="language-c">// beginning of the source file
 static struct tm_the_truth_api *tm_the_truth_api;
 #include &lt;foundation/api_registry.h&gt;
