--- a/the_machinery_book/editing_workflows/sculpting.html
+++ b/the_machinery_book/editing_workflows/sculpting.html
@@ -150,7 +150,7 @@
 <blockquote>
 <p><strong>Note:</strong> This tool is in a preview state.</p>
 </blockquote>
-<p>With the Sculpt Tool The Machinery supportes rapid prototyping when it comes to level white boxing. You make use of the tool by adding a Sclupt Component to an Entity. Using the sculpt component you can quickly sketch out levels or make beautiful blocky art:</p>
+<p>With the Sculpt Tool The Machinery supports rapid prototyping when it comes to level white boxing. You make use of the tool by adding a Sculpt Component to an Entity. Using the sculpt component you can quickly sketch out levels or make beautiful blocky art:</p>
 <p><img src="https://ourmachinery.com/images/beta_20_11__blocky.png" alt="A blocky character in a blocky forest setting." /></p>
 <p><em>A blocky character in a blocky forest setting.</em></p>
 <h2 id="how-to-use-the-tool"><a class="header" href="#how-to-use-the-tool">How to use the Tool</a></h2>
