--- a/the_machinery_book/gameplay_coding/ecs/index.html
+++ b/the_machinery_book/gameplay_coding/ecs/index.html
@@ -147,20 +147,20 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="entity-component-system"><a class="header" href="#entity-component-system">Entity Component System</a></h1>
-<p>This section of the book shall help you understand how to make use of our Entity Component System. Designing games with a ECS can be overwhelming. Especially if you come from a more traditional background: Object Oriented Approaches. This chapter will provide you with the basic understanding of what a ECS is and how you can use it!. </p>
+<p>This section of the book shall help you understand how to make use of our Entity Component System. Designing games with an ECS can be overwhelming. Especially if you come from a more traditional background: Object Oriented Approaches. This chapter will provide you with the basic understanding of what an ECS is and how you can use it!. </p>
 <p>Let us begin with the purpose of the entity system! Its purpose is it to provide a flexible model for <em>objects in a simulation</em>, that
-allows us to compose complex objects from simpler components in a flexible and performant way. An <em>entity</em> is a game object composed of <em>components</em>. Entities live in a <em>entity context</em> — an isolated world of entities. In the Machinery each of the following tabs has its own Entity Context: Simulate Tab, Scene Tab, Preview Tab. Entities within those tabs only exist within these contexts! Each new instance of the tab has a different context! Entities are composed of components. They are there to hold the needed data while <em>Engines</em>/<em>Systems</em> are there to provide behaviour. Each context (<em>entity context</em>) can have a number of <em>engines</em> or <em>systems</em> registered. <em>(ECS)</em> Engines updates are running on subset of entities that posses some set of components. </p>
+allows us to compose complex objects from simpler components in a flexible and performant way. An <em>entity</em> is a game object composed of <em>components</em>. Entities live in a <em>entity context</em> — an isolated world of entities. In the Machinery each of the following tabs has its own Entity Context: Simulate Tab, Scene Tab, Preview Tab. Entities within those tabs only exist within these contexts! Each new instance of the tab has a different context! Entities are composed of components. They are there to hold the needed data while <em>Engines</em>/<em>Systems</em> are there to provide behaviour. Each context (<em>entity context</em>) can have a number of <em>engines</em> or <em>systems</em> registered. <em>(ECS)</em> Engine updates are running on a subset of entities that posses some set of components. </p>
 <blockquote>
 <p><strong>Note</strong>: in some entity systems, these are referred to as <em>systems</em> instead, but we choose <em>engine</em>, because it is less ambiguous.</p>
 </blockquote>
-<p>While Systems are just a update with a provided access to the entity context. When we refer to a context in this chapter we mean the entity context.</p>
+<p>While Systems are just an update with a provided access to the entity context. When we refer to a context in this chapter we mean the entity context.</p>
 <p><strong>Table of Content</strong></p>
 <ul>
 <li><a href="#what-is-an-entity">What is an Entity?</a></li>
 <li><a href="#what-is-an-entity-context">What is an Entity Context?</a></li>
 <li><a href="#where-do-entities-live-lifecycle">Where do Entities live? (Lifecycle)</a></li>
 <li><a href="#how-is-the-data-stored">How is the data stored?</a></li>
-<li><a href="#what-is-an-entity-types--archetype">What is an Entity types / Archetype?</a></li>
+<li><a href="#what-is-an-entity-type--archetype">What is an Entity type / Archetype?</a></li>
 <li><a href="#what-are-components">What are Components?</a>
 <ul>
 <li><a href="#best-practice">Best Practice</a></li>
@@ -177,14 +177,14 @@ allows us to compose complex objects from simpler components in a flexible and p
 <li><a href="#child-entities">Child entities</a></li>
 </ul>
 <h2 id="what-is-an-entity"><a class="header" href="#what-is-an-entity">What is an Entity?</a></h2>
-<p>An entity is the fundamental part of the Entity Component System. An entity is a handle to your data. Itself does not store any data or behavior.  The data is stored in components, which are associated with the Entity. The behavior is defined in Systems and Engines which process those components. Therefore a entity acts as an identifier or key to the data stored in components.</p>
+<p>An entity is the fundamental part of the Entity Component System. An entity is a handle to your data. The entity itself does not store any data or behavior.  The data is stored in components, which are associated with the Entity. The behavior is defined in Systems and Engines which process those components. Therefore an entity acts as an identifier or key to the data stored in components.</p>
 <p><img src="https://www.dropbox.com/s/5956267ltb4l14x/tm_guide_entity.png?dl=1" alt="" /></p>
 <blockquote>
 <p><strong>Note:</strong> In this example both entities have the same set of components, but they do not own the data they just refer to it!</p>
 </blockquote>
 <p>Entities are managed by the Entity API and exist within an Entity Context. An Entity struct refers to an entity, but is not a real reference. Rather the Entity struct contains an index used to access entity data.</p>
 <h2 id="what-is-an-entity-context"><a class="header" href="#what-is-an-entity-context">What is an Entity Context?</a></h2>
-<p>The Entity Context is the simulation world. It contains all the Entites and Systems/Engines as well owns all the Component Data. There can be multiple Entity Contexts in the Editor. For example the Simulate tag, Preview Tab have both a Entity Context. When you Register A System/Engine you an decide in which context they shall run. The Default is in all contexts. </p>
+<p>The Entity Context is the simulation world. It contains all the Entities and Systems/Engines as well as owns all the Component Data. There can be multiple Entity Contexts in the Editor. For example the Simulate tag, Preview Tab have both an Entity Context. When you Register A System/Engine you can decide in which context they shall run. The Default is in all contexts. </p>
 <h2 id="where-do-entities-live-lifecycle"><a class="header" href="#where-do-entities-live-lifecycle">Where do Entities live? (Lifecycle)</a></h2>
 <ul>
 <li>Entities <strong>do not live in The Truth</strong>. The truth is for <em>assets</em>, not for <em>simulation.</em></li>
@@ -202,7 +202,7 @@ the main way in which we will provide a “preview” of assets in a simulation 
 <li>The generation is increased every time we recycle a slot. This allows us to detect stale entity
 IDs (i.e., weak referencing through <code>is_alive()</code>.</li>
 </ul>
-<h2 id="what-is-an-entity-types--archetype"><a class="header" href="#what-is-an-entity-types--archetype">What is an Entity types / Archetype?</a></h2>
+<h2 id="what-is-an-entity-type--archetype"><a class="header" href="#what-is-an-entity-type--archetype">What is an Entity type / Archetype?</a></h2>
 <p>An Entity Types is a unique combination of component types. The Entity API uses the entity type to group all entities that have the same sets of components.</p>
 <p><img src="https://www.dropbox.com/s/453d1nqrwnsntbw/tm_guide_entity_entity_type.png?dl=1" alt="" /></p>
 <blockquote>
@@ -215,7 +215,7 @@ must be copied over to the new type.</li>
 <li>Pointers to component data are thus not permanent.</li>
 </ul>
 <h2 id="what-are-components"><a class="header" href="#what-are-components">What are Components?</a></h2>
-<p>They are data, that is all they are. Designing them is the most important task you will find yoursefl doing in a ESC driven game. The reason is that if you change a component you have to update all systems that use it. This data together composed makes up an Entity. It an be changed at runtime, how ever it is required. This data is transformed in Systems/Engines and therefore Systems / Engines provide the Behaviour of our game based on the input/output of other Systems/Engines.</p>
+<p>They are data, that is all they are. Designing them is the most important task you will find yourself doing in an ESC driven game. The reason is that if you change a component you have to update all systems that use it. This data composed together makes up an Entity. It can be changed at runtime, in what ever way required. This data is transformed in Systems/Engines and therefore Systems/Engines provide the Behaviour of our game based on the input/output of other Systems/Engines.</p>
 <blockquote>
 <p><strong>Note</strong>:  Keep in mind they do not need a Truth Representation. If they do not have one, the Engine cannot display them in the Entity Tree View. This is useful for runtime only components.</p>
 </blockquote>
@@ -230,17 +230,17 @@ lists, strings, buffers, etc.</li>
 <p><img src="https://www.dropbox.com/s/1d39bh17zqgeloy/tm_guide_ecs_component.png?dl=1" alt="" /></p>
 <blockquote>
 <p><strong>It's all about the data</strong></p>
-<p>Data is all we have. Data is what we need to transform in order to create a user experience. Data is what we load when we open a document. Data is the graphics on the screen and the pulses from the buttons on your game pad and the cause of your speakers and headphones producing waves in the air and the method by which you level up and how the bad guy knew where you were to shoot at you and how long the dynamite took to explode and how many rings you dropped when you fell on the spikes and the current velocity of every particle in the beautiful scene that ended the game, that was loaded off the disc and into your life. Any application is nothing without its data. Photoshop without the images is nothing. Word is nothing without the characters. Cubase is worthless without the events. All the applications that have ever been written have been written to output data based on some input data. The form of that data can be extremely complex, or so simple it requires no documentation at all, but all applications produce and need data. (<a href="https://www.dataorienteddesign.com/dodmain/node3.html">Source</a>)</p>
+<p>Data is all we have. Data is what we need to transform in order to create a user experience. Data is what we load when we open a document. Data is the graphics on the screen and the pulses from the buttons on your gamepad and the cause of your speakers and headphones producing waves in the air and the method by which you level up and how the bad guy knew where you were to shoot at you and how long the dynamite took to explode and how many rings you dropped when you fell on the spikes and the current velocity of every particle in the beautiful scene that ended the game, that was loaded off the disc and into your life. Any application is nothing without its data. Photoshop without the images is nothing. Word is nothing without the characters. Cubase is worthless without the events. All the applications that have ever been written have been written to output data based on some input data. The form of that data can be extremely complex, or so simple it requires no documentation at all, but all applications produce and need data. (<a href="https://www.dataorienteddesign.com/dodmain/node3.html">Source</a>)</p>
 </blockquote>
 <h3 id="best-practice"><a class="header" href="#best-practice">Best Practice</a></h3>
 <ul>
-<li><strong>Component Size:</strong> Keep them small and atomic. The main reason for this is  that it improves caching performance. Besides having a lot of small components allowes for more reusablity and compostability!  Besides if they are atomic units of data, they increase their value to be reused across projects better and can provide more combinations. <em>The biggest disadvanatge</em> is that smal components make it harder to find them, the larger your project is.</li>
-<li><strong>Complex component data:</strong> Generally speaking you want to avoid storing complex data such as arrays or heap allocated data in a component. It is possible and sometimes not possible to avoid, but it is always good to ask yourelf if its needed.</li>
+<li><strong>Component Size:</strong> Keep them small and atomic. The main reason for this is  that it improves caching performance. Besides having a lot of small components allows for more reusability and compostability! Besides if they are atomic units of data, they increase their value to be reused across projects better and can provide more combinations. <em>The biggest disadvantage</em> is that small components make it harder to find them, the larger your project is.</li>
+<li><strong>Complex component data:</strong> Generally speaking you want to avoid storing complex data such as arrays or heap allocated data in a component. It is possible and sometimes not possible to avoid, but it is always good to ask yourself if it is needed.</li>
 </ul>
 <h2 id="what-is-a-component-manager"><a class="header" href="#what-is-a-component-manager">What is a Component Manager?</a></h2>
 <ul>
 <li>
-<p>Can store persitsent data from the beginning of the Entity Context till the end</p>
+<p>Can store persistent data from the beginning of the Entity Context till the end</p>
 </li>
 <li>
 <p>Can provide a way to allocate data on adding/removing a component</p>
@@ -248,7 +248,7 @@ lists, strings, buffers, etc.</li>
 </ul>
 <p><img src="https://www.dropbox.com/s/kre84a4vqouq37z/tm_guide_component_manager.png?dl=1" alt="" /></p>
 <h2 id="game-logic"><a class="header" href="#game-logic">Game Logic</a></h2>
-<p>The behavior is defined in Systems and Engines which process those components. Systems and Engines can be seen as data transfromation actions. They take some input (components) and process them to some output (changed component data, different rendering) and a chain of small system together makes up your game!</p>
+<p>The behavior is defined in Systems and Engines which process those components. Systems and Engines can be seen as data transformation actions. They take some input (components) and process them to some output (changed component data, different rendering) and a chain of small systems together makes up your game!</p>
 <p><img src="https://www.dropbox.com/s/5wqvcf27vvx5b7v/engines.png?dl=1" alt="" /></p>
 <h3 id="what-are-engines"><a class="header" href="#what-are-engines">What are Engines?</a></h3>
 <blockquote>
@@ -259,10 +259,10 @@ lists, strings, buffers, etc.</li>
 <p>An engine is an update that runs for all components matching a certain <em>component mask</em>.</p>
 </li>
 <li>
-<p>Engines registered with the context runs automatically on update, in parallel.</p>
+<p>Engines registered with the context run automatically on update, in parallel.</p>
 </li>
 <li>
-<p>Parallelization is done automatic, by looking at the components that each engine reads or writes.
+<p>Parallelization is done automatically, by looking at the components that each engine reads or writes.
 Before running, an engine waits for the previous engines that wrote to the components that the
 engine is interested in.</p>
 <p>The following image shows how a time based movement System could look like:</p>
@@ -282,13 +282,13 @@ engine is interested in.</p>
 </li>
 </ul>
 <h2 id="how-are-entity-assets-translated-to-ecs-entities"><a class="header" href="#how-are-entity-assets-translated-to-ecs-entities">How are Entity Assets translated to ECS Entities?</a></h2>
-<p>Since the Truth is a editor concept and our main data model, your scene is stored in the Truth. When you start the simulation your Assets get translated to the ECS via the <code>asset_load()</code> function! In your <a href="https://ourmachinery.com/apidoc/plugins/entity/entity.h.html#structtm_component_i">tm_component_i</a> you can provide this function if you want your component to translate to the ECS world. In there you have access to the Truth, afterwards not anymore! Besides you can provide some other callbacks for differnt stages of the translation process. </p>
+<p>Since the Truth is an editor concept and our main data model, your scene is stored in the Truth. When you start the simulation your Assets get translated to the ECS via the <code>asset_load()</code> function. In your <a href="https://ourmachinery.com/apidoc/plugins/entity/entity.h.html#structtm_component_i">tm_component_i</a> you can provide this function if you want your component to translate to the ECS world. In there you have access to the Truth, afterwards not anymore. Besides, you can provide some other callbacks for different stages of the translation process. </p>
 <p><img src="https://www.dropbox.com/s/ao6cs4fpyx9i078/truth_ecs%20%282%29.png?dl=1" alt="" /></p>
 <blockquote>
-<p><strong>Important:</strong> A Component representation in The Truth may <strong>not</strong> reflect the runtime ECS representation. This can be used to separate a Truth representation into smaller bits for gameplay programming sake but keep the simplicty for the Front End user.</p>
+<p><strong>Important:</strong> A Component representation in The Truth may <strong>not</strong> reflect the runtime ECS representation. This can be used to separate a Truth representation into smaller bits for gameplay programming sake but keep the simplicity for the Front End user.</p>
 </blockquote>
 <p><em>Example:</em></p>
-<p>You have a <code>Movement Controller Component</code> that can be used via the UI to determine the Entities movement speed. The actual movement system interacts with a <code>Movement Component</code> which keeps track of the actual current speed and can be influenced by other systems while the Movement Controller is only there to keep the fixed <code>const</code> state and can only be influenced by a Skill Update system or something like this.</p>
+<p>You have a <code>Movement Controller Component</code> that can be used via the UI to determine the Entities movement speed. The actual movement system interacts with a <code>Movement Component</code> which keeps track of the actual current speed and can be influenced by other systems while the Movement Controller is only there to keep the fixed <code>const</code> state, but it can be influenced by a Skill Update system or something like this.</p>
 <h2 id="child-entities"><a class="header" href="#child-entities">Child entities</a></h2>
 <ul>
 <li>
